Nav hover/focus a11y contrast fix.

--- a/_assets/stylesheets/_navigation.scss
+++ b/_assets/stylesheets/_navigation.scss
@@ -74,7 +74,7 @@
 
       &:focus,
       &:hover {
-        border-bottom: 3px solid transparentize($action-colour, .3);
+        border-bottom: 3px solid transparentize($action-colour, .1);
 
         color: $white;
       }
